Fix : 모바일 overflow-x 방지

--- a/src/pages/home/S01.module.scss
+++ b/src/pages/home/S01.module.scss
@@ -10,6 +10,7 @@
   max-height: 100vh;
   min-height: 100vh;
   background-image: url('../../assets/images/home/s01/background.jpg');
+  overflow: hidden;
 
   > .circle {
     margin-top: 72px;
