--- a/src/pages/home/S02.module.scss
+++ b/src/pages/home/S02.module.scss
@@ -8,6 +8,7 @@
   width: 100%;
   height: 100vh;
   background-image: url('../../assets/images/home/s02/background_sand.jpg');
+  overflow: hidden;
 
   > .title {
     position: absolute;
